@@ -157,11 +157,9 @@ class tx_srfeuserregister_transmission_security {
 				if (count($extraHiddenFieldsArray)) {
 					$extraHiddenFields = implode(LF, $extraHiddenFieldsArray);
 				}
-				$extraHiddenFields .= LF . '<script type="text/javascript" src="' .
-					t3lib_div::getIndpEnv('TYPO3_SITE_URL') .
-					t3lib_extMgm::siteRelPath('sr_feuser_register') . 'scripts/rsaauth.js"></script>';
+				$GLOBALS['TSFE']->additionalHeaderData['sr_feuser_register_rsaauth'] = '<script type="text/javascript" src="' . $GLOBALS['TSFE']->absRefPrefix . t3lib_div::createVersionNumberedFilename(t3lib_extMgm::siteRelPath('sr_feuser_register')  . 'scripts/rsaauth.js') . '"></script>';
 				$markerArray['###FORM_ONSUBMIT###'] = ' onsubmit="tx_srfeuserregister_encrypt(this); return true;"';
-				$markerArray['###HIDDENFIELDS###'] .= $extraHiddenFields;
+				$markerArray['###HIDDENFIELDS###'] .= LF . $extraHiddenFields;
 				break;
 			case 'normal':
 			default:
