@@ -4,6 +4,7 @@
 	* Fix bug #12795 (old bug tracker): Default setup damages valid e-mail adresses
 	* Fix bug #13765 (old bug tracker): Attachment file is attached to the administrative review email
 	* Follow-up 8 to feature #34447: Add ###LABEL_NEW_PASSWORD### on ###TEMPLATE_EDIT###
+	* Fix bug #35786: JavaScript files are not versioned
 
 2012-04-07 Stanislas Rolland  <typo3@sjbr.ca>
 	* Follow-up 7 to feature #34447: ###HIDDENFIELDS### not always replaced
